--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/CeaserSP/MasterMindCP#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "node-modules": "^1.0.1"
   }
 }
