--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "node-modules": "^1.0.1"
+    "node-modules": "^1.0.1",
+    "path": "^0.12.7"
   }
 }
